Create featuredbook add API Create featuredbook list API Create featuredbook remove API
